--- a/index.html
+++ b/index.html
@@ -19,7 +19,127 @@
     <!-- banner：Oria -->
 
     <!-- 作品集頁面：開心Jo好 -->
+    <div class="container">
+      <!-- 1 -->
+      <div class="card">
+        <div class="pic">
+          <img
+            src="https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/work-image1.png?raw=true"
+            alt="星際旅行訂票平台"
+          />
+        </div>
+        <div class="content">
+          <h3 class="title">星際旅行訂票平台</h3>
+          <p class="text">優游宇宙的夢想，從這裡開始實現</p>
+          <div class="tags">
+            <div class="tag">網頁設計</div>
+            <div class="tag">響應式設計</div>
+            <div class="tag">Bootstrap</div>
+          </div>
+        </div>
+      </div>
 
+      <!-- 2 -->
+      <div class="card">
+        <div class="pic">
+          <img
+            src="https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/work-image2.png?raw=true"
+            alt="理財APP"
+          />
+        </div>
+        <div class="content">
+          <h3 class="title">理財APP</h3>
+          <p class="text">聯動帳戶與行動支付，讓AI提供您最好的理財建議</p>
+          <div class="tags">
+            <div class="tag">APP設計</div>
+            <div class="tag">iOS</div>
+            <div class="tag">React</div>
+          </div>
+        </div>
+      </div>
+
+      <!-- 3 -->
+      <div class="card">
+        <div class="pic">
+          <img
+            src="https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/work-image3.png?raw=true"
+            alt="醫美診所官網"
+          />
+        </div>
+        <div class="content">
+          <h3 class="title">醫美診所官網</h3>
+          <p class="text">永保青春的秘密，從粹究開始</p>
+          <div class="tags">
+            <div class="tag">網頁設計</div>
+            <div class="tag">響應式設計</div>
+            <div class="tag">WordPress</div>
+          </div>
+        </div>
+      </div>
+
+      <!-- 4 -->
+      <div class="card">
+        <div class="pic">
+          <img
+            src="https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/work-image4.png?raw=true"
+            alt="美美早餐店POS機UI Design"
+          />
+        </div>
+        <div class="content">
+          <h3 class="title">美美早餐店POS機UI Design</h3>
+          <p class="text">訂單送單一目瞭然，自動報表分析好輕鬆</p>
+          <div class="tags">
+            <div class="tag">UI設計</div>
+            <div class="tag">前端開發</div>
+            <div class="tag">Wix</div>
+          </div>
+        </div>
+      </div>
+
+      <!-- 5 -->
+      <div class="card">
+        <div class="pic">
+          <img
+            src="https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/work-image5.png?raw=true"
+            alt="美美早餐店POS機UI Design"
+          />
+        </div>
+        <div class="content">
+          <h3 class="title">電影院訂票系統</h3>
+          <p class="text">三步驟完成訂票，電腦手機都支援</p>
+          <div class="tags">
+            <div class="tag">前端開發</div>
+            <div class="tag">後端支援</div>
+            <div class="tag">Vue</div>
+          </div>
+        </div>
+      </div>
+
+      <!-- 6 -->
+      <div class="card">
+        <div class="pic">
+          <img
+            src="https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/work-image6.png?raw=true"
+            alt="巧克巧克形象官網設計"
+          />
+        </div>
+        <div class="content">
+          <h3 class="title">巧克巧克形象官網設計</h3>
+          <p class="text">三步驟完成訂票，電腦手機都支援</p>
+          <div class="tags">
+            <div class="tag">UI設計</div>
+            <div class="tag">設計系統</div>
+            <div class="tag">網路電商</div>
+          </div>
+        </div>
+      </div>
+      <!-- 頁籤 -->
+      <ol class="item">
+        <li class="bookMark">1</li>
+        <li>2</li>
+        <li>3</li>
+      </ol>
+    </div>
     <!-- 表尾：2fish -->
     <div class="bg">
       <footer
