5/24 導覽列排版

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <!-- 表頭：boin -->
     <nav class="navbar">
-      <div class="container content">
+      <div class="header content">
           <a href="#">
             <img src="./images/header/logo.svg" alt="logo">
           </a>
