--- a/index.html
+++ b/index.html
@@ -19,41 +19,43 @@
   <body>
     <!-- 表頭：boin -->
     <nav class="navbar">
-      <div class="header content">
-          <a href="#">
-            <img src="./images/header/logo.svg" alt="logo">
-          </a>
+      <div class="header header-content">
+          <div class="logo">
+            <a href="#">
+              <img src="./images/header/logo.svg" alt="logo">
+            </a>
+          </div>
           
           <ul class="nav-bar-list">
-            <li class="item">
+            <li class="header-item">
               <a href="#">首頁</a>
               <span class="vector1 border"></span>
               <span class="vector2 border"></span>
               <span class="vector3 border"></span>
               <span class="vector4 border"></span> 
             </li>
-            <li class="item">
+            <li class="header-item">
               <a href="#">作品集</a>
               <span class="vector1 border"></span>
               <span class="vector2 border"></span>
               <span class="vector3 border"></span>
               <span class="vector4 border"></span>
             </li>
-            <li class="item">
+            <li class="header-item">
               <a href="#">服務項目</a>
               <span class="vector1 border"></span>
               <span class="vector2 border"></span>
               <span class="vector3 border"></span>
               <span class="vector4 border"></span>
             </li>
-            <li class="item">
+            <li class="header-item">
               <a href="#">部落格</a>
               <span class="vector1 border"></span>
               <span class="vector2 border"></span>
               <span class="vector3 border"></span>
               <span class="vector4 border"></span>
             </li>
-            <li class="item">
+            <li class="header-item">
               <a href="#">聯絡我</a>
               <span class="vector1 border"></span>
               <span class="vector2 border"></span>
