--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- 表頭：boin -->
-    <nav class="navbar">
+    <div class="navbar">
       <div class="header header-content">
           <div class="logo">
             <a href="#">
@@ -65,12 +65,15 @@
           </ul>
 
           <button type="button" class="navbar-btn">
-            <span class="material-symbols-outlined">
+            <span class="material-symbols-outlined hamburger">
               menu
+            </span>
+            <span class="material-symbols-outlined closure close">
+              close
             </span>
           </button>
       </div>
-    </nav>
+    </div>
     
     <!-- banner：Oria -->
 
