--- a/index.html
+++ b/index.html
@@ -76,6 +76,16 @@
     </div>
     
     <!-- banner：Oria -->
+    <div class="banner">
+      <span class="banner-top">
+        <h1>
+          讓使用者在觀賞與使用的旅程中，發現設計的價值  
+          <br/>   
+          而我在設計與開發的過程中，看見自己的價值
+        </h1>  
+      </span>
+      
+    </div>
 
     <!-- 作品集頁面：開心Jo好 -->
     <div class="container">
@@ -199,10 +209,11 @@
         <li>3</li>
       </ol>
     </div>
+
     <!-- 表尾：2fish -->
     <div class="bg">
       <footer
-        class="max-w-[1200px] md:m-auto flex flex-col gap-10 px-8 py-10 md:flex-row md:items-center md:justify-between"
+        class="max-w-[1200px] md:m-auto flex flex-col gap-10 px-8 py-10 md:flex-row md:items-center md:justify-around"
       >
         <div class="flex flex-col items-center md:items-start">
           <div class="mb-6">
@@ -213,25 +224,19 @@
           <p class="mt-6 text-[#919191]">歡迎填寫表單，或直接與我聯絡！</p>
         </div>
 
-        <div class="flex flex-col items-center gap-6 md:w-[306px]">
-          <a
-            class="h-[72px] w-full max-w-[306px] rounded-lg bg-black px-6 py-3 text-left text-white hover-opacity-80 cursor-pointer flex items-center gap-4"
-          >
-            <i class="far fa-list-alt" style="font-size: 40px"></i>
+        <div class="flex flex-col footer-info">
+          <a class="">
+            <i class="far fa-list-alt"></i>
             填寫表單
           </a>
 
-          <a
-            class="w-full max-w-[306px] rounded-lg border border-[#C1C1C1] px-6 py-3 text-left text-[#3B3B3B] bg-white hover-opacity-80 cursor-pointer flex items-center gap-4"
-          >
-            <i class="fab fa-instagram" style="font-size: 46px"></i>
+          <a class="">
+            <i class="fab fa-instagram"></i>
             hexschool_demo
           </a>
 
-          <a
-            class="w-full max-w-[306px] rounded-lg border border-[#C1C1C1] px-6 py-3 text-left text-[#3B3B3B] bg-white hover-opacity-80 cursor-pointer flex items-center gap-4"
-          >
-            <i class="fab fa-facebook-square" style="font-size: 46px"></i>
+          <a class="">
+            <i class="fab fa-facebook-square"></i>
             hexschoolTW
           </a>
         </div>
