5/28 update css(add banner)

--- a/index.html
+++ b/index.html
@@ -77,13 +77,24 @@
     
     <!-- banner：Oria -->
     <div class="banner">
-      <span class="banner-top">
-        <h1>
-          讓使用者在觀賞與使用的旅程中，發現設計的價值  
+      <div class="banner-top">
+          讓使用者在觀賞與使用的旅程中，發現
+          <span class="underline-banner underline-1">設計的價值</span> 
           <br/>   
-          而我在設計與開發的過程中，看見自己的價值
-        </h1>  
-      </span>
+          而我在設計與開發的過程中，看見
+          <span class="underline-banner underline-2">自己的價值</span>
+      </div>
+
+      <div class="banner-bottom">
+        <div class="bottom-left">
+          <h1>2B經驗</h1>
+          <p>內部監控系統、庫存系統、採購系統、行銷整合系統</p>
+        </div>
+        <div class="bottom-right">
+          <h1>2C經驗</h1>
+          <p>跨國美妝保養電商、個人品牌網站、醫美網站、電子商務</p>
+        </div>
+      </div>
       
     </div>
 
